<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.study.pronounce.PronouncePracticeFragment">

    <TextView
        style="@style/StudyTitleTextView"
        android:background="@color/light_pink"
        android:text="@string/study_pronounce_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/gray">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_sign_in_short"
            android:textAppearance="@style/Noto_Sans.TEXT.B.20"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/action_sign_in_short"
            android:textAppearance="@style/Noto_Sans.TEXT.L.14"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/card_background"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/fragment_padding"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:contentDescription="@string/all_album_jacket_img_description"
                tools:src="@drawable/app_logo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/action_sign_in"
                    android:textAppearance="@style/Noto_Sans.TEXT.B.16"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="start|center"
                    android:text="@string/action_sign_in_short"
                    android:textAppearance="@style/Noto_Sans.TEXT.R.11" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="@dimen/fragment_padding"
            android:gravity="center">
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="0dp"
                android:backgroundTint="@color/smudy_mint"
                android:textColor="@color/white"
                android:textAppearance="@style/Nanum_Square.TEXT.EB.12"
                android:text="@string/pronounce_btn_reset" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <FrameLayout
                android:layout_width="60dp"
                android:layout_height="60dp">
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_record_button_checked"
                    android:layout_gravity="center"
                    android:visibility="invisible"
                    android:contentDescription="@string/pronounce_record_stop_img_description" />
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_record_button_unchecked"
                    android:layout_gravity="center"
                    android:contentDescription="@string/pronounce_record_start_img_description" />
            </FrameLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="0dp"
                android:backgroundTint="@color/smudy_mint"
                android:textColor="@color/white"
                android:textAppearance="@style/Nanum_Square.TEXT.EB.12"
                android:text="@string/pronounce_btn_analyze" />
        </LinearLayout>
    </LinearLayout>
    
</LinearLayout>