<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="@dimen/fragment_padding">

    <ImageView
        android:id="@+id/iv_album_jacket"
        android:layout_width="@dimen/jacket_size_medium"
        android:layout_height="@dimen/jacket_size_medium"
        android:contentDescription="@string/all_album_jacket_img_description"
        tools:src="@drawable/ic_bottom_home_normal" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/item_padding"
        android:layout_weight="1"
        android:gravity="center|start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_album_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textAppearance="@style/Noto_Sans.TEXT.B.12"
            tools:text="@string/action_sign_in" />

        <TextView
            android:id="@+id/tv_album_singer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:textAppearance="@style/Noto_Sans.TEXT.R.11"
            tools:text="@string/login_img_app_logo" />

    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</LinearLayout>