<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.study.fill.FillResultFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_purple"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_small"
        android:text="@string/blank_title"
        android:textAppearance="@style/Jalnan.TEXT.R.12"
        android:textColor="@color/white" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lyrics"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_small"
        android:layout_weight="1"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_blank_lyric" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/music_player_background"
        android:orientation="horizontal"
        android:padding="@dimen/item_padding">

        <include
            android:id="@+id/lo_basic"
            layout="@layout/layout_music_basic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_num_of_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "@string/progress_init"
                    android:textAppearance="@style/Jalnan.TEXT.R.12"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/tv_num_of_questions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Jalnan.TEXT.R.12"
                    tools:text="20"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:textAppearance="@style/Nanum_Square.TEXT.EB.12"
                android:textColor="@color/white"
                android:backgroundTint="@color/smudy_mint" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>